code now cimpileable on JDK 25 (but some tests on h5 fail!)